--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: objective-c
 cache: cocoapods
 podfile: DTConsole/Podfile
 # before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
+- gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
 - set -o pipefail && xcodebuild test -workspace Example/DTConsole.xcworkspace -scheme DTConsole-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
