--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode8.1
+osx_image: xcode8.2
 language: objective-c
 cache: cocoapods
 podfile: DTConsole/Podfile
@@ -10,5 +10,5 @@ podfile: DTConsole/Podfile
 - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/DTConsole.xcworkspace -scheme DTConsole-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- xcodebuild clean build test -project DTConsole.xcodeproj -scheme DTConsole
 - pod lib lint
